<resources>
    <string name="app_name" translatable="false">Pumba</string>
    <string name="rewarded_ad_unit_id" translatable="false">ca-app-pub-3020524047688446/6113128857</string>
    <string name="rewared_ad_one_unit_id" translatable="false">ca-app-pub-3020524047688446/3431125191</string>

    <string name="offer_interstitial" translatable="false">ca-app-pub-3020524047688446/6107664501</string>
    <string name="interstitial_ad" translatable="false">ca-app-pub-3020524047688446/2564182921</string>
    <string name="refer_interstitial" translatable="false">ca-app-pub-3020524047688446/2548651303</string>
    <string name="wallet_intetstitial" translatable="false">ca-app-pub-3020524047688446/6296324623</string>

    <string name="banner1" translatable="false">ca-app-pub-3020524047688446/1830519907</string>


    <string name="True1" translatable="false">true</string>
    <string name="False1" translatable="false">false</string>
    <string name="True" translatable="false">true</string>
    <string name="False" translatable="false">false</string>

    <string name="homepage">HomePage</string>
    <string name="wallet">Wallet</string>
    <string name="earn">Earn</string>
    <string name="trending">Trending</string>
    <string name="offer">Offer</string>
    <string name="refer_38_earn"><![CDATA[Refer & Earn]]></string>
    <string name="gallery">gallery</string>
    <string name="glamour">glamour</string>
    <string name="health">health</string>
    <string name="joke">Joke</string>
    <string name="man_ki_baat">Man Ki Baat</string>
    <string name="my_city">My City</string>
    <string name="national_news">News</string>
    <string name="technology">Technology</string>
    <string name="weather">Weather</string>
    <string name="bollywood">Bollywood</string>
    <string name="for_me">For Me</string>
    <string name="offers">Offers</string>
    <string name="entertainment">Entertainment</string>
    <string name="web_client_id" translatable="false">535025052310-c8kqv4465e97pu8qh5jfk6r98q5dp7da.apps.googleusercontent.com</string>

    <string name="order_id" translatable="false">Order Id : </string>
    <string name="customer_id" translatable="false">Customer Id : </string>
    <string name="transaction_amount" translatable="false">Transaction Amount : </string>
    <string name="channel_id" translatable="false">Channel Id : </string>
    <string name="industry_type_id" translatable="false">Industry Type Id : </string>
    <string name="website" translatable="false">Website : </string>
    <string name="theme" translatable="false">Theme : </string>
    <string name="cust_email_id" translatable="false">Email Id : </string>
    <string name="cust_mobile_no" translatable="false">Mobile Number : </string>
    <string name="merchant_id" translatable="false">Merchant Id : </string>
    <string name="checksum_generation_url" translatable="false">Checksum Generation URL : </string>
    <string name="checksum_verification_url" translatable="false">Checksum Verification URL : </string>
    <string name="start_transaction" translatable="false">Start Transaction</string>
    <string name="sample_order_id" translatable="false">ORDER</string>
    <string name="sample_customer_id" translatable="false">CUST23657</string>
    <string name="sample_transaction_amount" translatable="false">1</string>
    <string name="sample_channel_id" translatable="false">WAP</string>
    <string name="sample_industry_type_id" translatable="false">Retail</string>
    <string name="sample_website" translatable="false">simplifiedandroidcoding.blogspot.com</string>
    <string name="sample_theme" translatable="false">merchant</string>
    <string name="sample_cust_email_id" translatable="false">abc@gmail.com</string>
    <string name="sample_cust_mobile_no" translatable="false">123</string>
    <string name="sample_merchant_id_staging" translatable="false">WorldP64425807474247</string>
    <string name="sample_checksum_generation_url" translatable="false">https://pguat.paytm.com/merchant-chksum/ChecksumGenerator</string>
    <string name="sample_checksum_verification_url" translatable="false">https://pguat.paytm.com/merchant-chksum/ValidateChksum</string>
    <string name="home">Home</string>
    <string name="politics">Politics</string>
    <string name="sports">Sports</string>
    <string name="refer">Refer</string>
    <string name="how">How</string>
    <string name="top_headlines">Top HeadLines</string>

    <string name="banner_ad_unit_id1" translatable="false">ca-app-pub-3020524047688446/4736728734</string>
    <string name="banner_ad_unit_id2" translatable="false">ca-app-pub-3020524047688446/2608548401</string>
    <string name="banner_ad_unit_id3" translatable="false">ca-app-pub-3020524047688446/8041548929</string>
    <string name="news_bulletin">समाचार पत्रिका</string>

    <string name="action_deep_link" translatable="false">
        com.google.android.gms.samples.appinvite.DEEP_LINK_ACTION
    </string>

    <string name="invite" translatable="false">Send invitations!</string>
    <string name="welcome" translatable="false">Invites</string>
    <string name="referrer_hint" translatable="false">Deep link not provided</string>
    <string name="deep_link_default" translatable="false">Deep link not set</string>
    <string name="invitation_id_default" translatable="false">Invitation ID not set</string>
    <string name="invite_friends" translatable="false">Invite Friends</string>

    <string name="invitation_title" translatable="false">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message" translatable="false">This app is terrific, give it a try and get $5 off!</string>
    <string name="invitation_deep_link" translatable="false">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image" translatable="false">https://developers.google.com/identity/images/g-logo.png</string>
    <string name="invitation_cta" translatable="false">Install!</string>

    <string name="deep_link_fmt" formatted="false" translatable="false">Deep Link: %s</string>

    <string name="send_failed" translatable="false">Sending invitations failed</string>
    <string name="invite_dialog_title" translatable="false">You got an invitation!</string>

    <string name="google_play_services_error" translatable="false">Google Play Services Error</string>
</resources>
