<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home"/>

    <item
        android:id="@+id/action_offer"
        android:icon="@drawable/ic_local_offer_black_24dp"
        android:title="@string/offer"/>
    <item
        android:id="@+id/action_trending"
        android:icon="@drawable/ic_trending_up_black_24dp"
        android:title="@string/trending"/>

    <item
        android:id="@+id/action_wallet"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/wallet"/>


    <item
        android:id="@+id/action_refer"
        android:icon="@drawable/ic_redeem_black_24dp"
        android:title="@string/refer_38_earn"/>
</menu>