<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="fill_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/top_headlines"
                android:textColor="#333232"
                android:textSize="16.5sp"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="1dp">


                <android.support.v7.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:id="@+id/entertainmentRecyclerView"
                    android:layout_height="wrap_content"/>
            </android.support.v7.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="fill_horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/politics"
                android:textColor="#333232"
                android:textSize="16.5sp"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/politics_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/sports"
                android:textColor="#333232"
                android:textSize="16.5sp"
                android:textStyle="bold"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/sports_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:max="100"
            android:progress="45"/>


    </RelativeLayout>
</ScrollView>